# ip_robot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: robot.h  robot_common.h  robot_ctrl_lqr.h  robot_ctrl_pid.h
notes/: inverted_pendulum_robot.lyx
notes/figures/: inverted_pendulum_cart_fbd.drawio
param/: robot.yaml
script/: plotWindow.py  plot_states.py
src/: main.cpp  robot.cpp  robot_ctrl_lqr.cpp  robot_ctrl_pid.cpp
